# FPL-Player

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/: tests.yml
lib/: home.ui  loading.ui  search.ui
src/: fplgui.py  main.py  test.py
src/fpld/: __init__.py  constants.py  formation.py  fplplayer.py  labels.py  predict.py  team.py
src/fpld/element/: __init__.py  db.py  linked.py
src/fpld/element/sub/: __init__.py  element.py  event.py  fixture.py  player.py  team.py
src/fpld/elements/: __init__.py  element.py  event.py  fixture.py  fplelems.py  labels.py  player.py  playerfull.py  position.py  team.py
src/fpld/team/: fplteam.py  validation.py
src/fpld/util/: __init__.py  attribute.py  constants.py  external.py  percent.py
src/gui/: __init__.py  element.py  format_widgets.py  home.py  parent.py  search.py  stats.py  thread.py  titles.py  widgets.py  windows.py
src/gui/widgets/: __init__.py  complex.py  simple.py  thread.py
tests/: examples.py  long_bench_squad_str.txt  squad_str.txt  test.py  test_attribute.py  test_constants.py  test_elements.py  test_events.py  test_fixture.py  test_formation.py  test_fplteam.py  test_labels.py  test_main.py  test_player.py  test_position.py  test_team.py  test_util.py
