[metadata]
name = fpld
description = Python interface for Fantasy Premier League API
author = Joseph Williams
platforms = win32
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages = fpld
install_requires = 
    pandas>=1
    sklearn>=0
    numpy>=1
    requests>=2
    PuLP>=2.
python_requires = >= 3.10
package_dir =
    =src
zip_safe = no
