[metadata]
name = fpld
description = Python interface for Fantasy Premier League API
author = Joseph Williams
platforms = win32
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages = fpld
install_requires = 
    pandas>=1
    sklearn>=0
    numpy>=1
    requests>=2
    PuLP>=2.
python_requires = >= 3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing=
    pytest>=7
    mypy>=0.910
    flake8>=5
    tox>=3.24
    pytest-cov>=3
    types-requests>=2.28

[options.package_data]
fpld = py.typed

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401
